// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutosuggestMulti callbacks onSelectionChange should be called on clicking on a suggestion 1`] = `
<AutosuggestMulti
  inputPlaceholder="type here..."
  onBlur={[MockFunction]}
  onInputValueChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "a",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSelectionChange={[MockFunction]}
  selectedSuggestions={Array []}
  suggestionToString={[Function]}
  suggestions={
    Array [
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptun",
      },
    ]
  }
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": <input
          aria-activedescendant="downshift-5-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="AutosuggestMulti__input"
          id="downshift-5-input"
          placeholder="type here..."
          value="a"
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionChange={[MockFunction]}
    showClearButton={false}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptun",
        },
      ]
    }
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue="a"
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-5-label"
          aria-owns="downshift-5-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="searchbox"
              tabIndex={0}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="AutosuggestMulti__wrapper AutosuggestMulti__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant="downshift-5-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-5-menu"
                    aria-labelledby="downshift-5-label"
                    autoComplete="off"
                    className="AutosuggestMulti__input"
                    id="downshift-5-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value="a"
                  />
                </div>
                <List
                  aria-labelledby="downshift-5-label"
                  className="SelectBase__list--focused"
                  doSelectOnNavigate={false}
                  id="downshift-5-menu"
                  isControlledNavigation={true}
                  isDivided={false}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-5-label"
                    className="List SelectBase__list--focused"
                    id="downshift-5-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue="a"
                      key=".0"
                      noSuggestionsPlaceholder=""
                      suggestionToString={[Function]}
                      suggestions={
                        Array [
                          Object {
                            "name": "Moon",
                          },
                          Object {
                            "name": "Mercury",
                          },
                          Object {
                            "name": "Venus",
                          },
                          Object {
                            "name": "Earth",
                          },
                          Object {
                            "name": "Mars",
                          },
                          Object {
                            "name": "Jupiter",
                          },
                          Object {
                            "name": "Saturn",
                          },
                          Object {
                            "name": "Neptun",
                          },
                        ]
                      }
                      useOptimizeRender={false}
                    >
                      <ListItem
                        aria-selected={true}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-0"
                        isHighlighted={true}
                        isSelected={false}
                        key="Moon"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={true}
                          className="ListItem ListItem--isHighlighted ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-0"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  Moon
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-1"
                        isHighlighted={false}
                        isSelected={false}
                        key="Mercury"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-1"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  Mercury
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-2"
                        isHighlighted={false}
                        isSelected={false}
                        key="Venus"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-2"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  Venus
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-3"
                        isHighlighted={false}
                        isSelected={false}
                        key="Earth"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-3"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  E
                                  <mark
                                    className="MarkedText__marked"
                                    key="match1"
                                  >
                                    a
                                  </mark>
                                  rth
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-4"
                        isHighlighted={false}
                        isSelected={false}
                        key="Mars"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-4"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  M
                                  <mark
                                    className="MarkedText__marked"
                                    key="match1"
                                  >
                                    a
                                  </mark>
                                  rs
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-5"
                        isHighlighted={false}
                        isSelected={false}
                        key="Jupiter"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-5"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  Jupiter
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-6"
                        isHighlighted={false}
                        isSelected={false}
                        key="Saturn"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-6"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  S
                                  <mark
                                    className="MarkedText__marked"
                                    key="match1"
                                  >
                                    a
                                  </mark>
                                  turn
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        highlightContext="brand"
                        id="downshift-5-item-7"
                        isHighlighted={false}
                        isSelected={false}
                        key="Neptun"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--highlightContext_brand ListItem--clickable"
                          id="downshift-5-item-7"
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <div
                            className="ListItem__container"
                            onClick={[Function]}
                            role="presentation"
                          >
                            <MarkedText
                              inline={true}
                              key=".0"
                              marker="a"
                            >
                              <Text
                                context="default"
                                inline={true}
                                size="normal"
                              >
                                <span>
                                  Neptun
                                </span>
                              </Text>
                            </MarkedText>
                          </div>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</AutosuggestMulti>
`;

exports[`AutosuggestMulti rendering should initially render empty component correctly 1`] = `
<AutosuggestMulti
  inputPlaceholder="type here..."
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionChange={[MockFunction]}
  selectedSuggestions={Array []}
  suggestionToString={[Function]}
  suggestions={Array []}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="AutosuggestMulti__input"
          id="downshift-0-input"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionChange={[MockFunction]}
    showClearButton={false}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="SelectBase__main"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isFocused={false}
            onClear={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            showClearButton={false}
          >
            <div
              className="FieldWrapper SelectBase__field"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="searchbox"
              tabIndex={0}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="AutosuggestMulti__wrapper"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls={null}
                    aria-labelledby="downshift-0-label"
                    autoComplete="off"
                    className="AutosuggestMulti__input"
                    id="downshift-0-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-0-label"
                  doSelectOnNavigate={false}
                  id="downshift-0-menu"
                  isControlledNavigation={true}
                  isDivided={false}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-0-label"
                    className="List"
                    id="downshift-0-menu"
                    role="listbox"
                  />
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</AutosuggestMulti>
`;

exports[`AutosuggestMulti rendering should render empty component correctly when focused 1`] = `
<AutosuggestMulti
  inputPlaceholder="type here..."
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionChange={[MockFunction]}
  selectedSuggestions={Array []}
  suggestionToString={[Function]}
  suggestions={Array []}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": <input
          aria-activedescendant="downshift-1-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="AutosuggestMulti__input"
          id="downshift-1-input"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionChange={[MockFunction]}
    showClearButton={false}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          aria-owns="downshift-1-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="searchbox"
              tabIndex={0}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="AutosuggestMulti__wrapper AutosuggestMulti__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant="downshift-1-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-1-menu"
                    aria-labelledby="downshift-1-label"
                    autoComplete="off"
                    className="AutosuggestMulti__input"
                    id="downshift-1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-1-label"
                  className="SelectBase__list--focused"
                  doSelectOnNavigate={false}
                  id="downshift-1-menu"
                  isControlledNavigation={true}
                  isDivided={false}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-1-label"
                    className="List SelectBase__list--focused"
                    id="downshift-1-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue=""
                      key=".0"
                      noSuggestionsPlaceholder=""
                      suggestionToString={[Function]}
                      suggestions={Array []}
                      useOptimizeRender={false}
                    />
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</AutosuggestMulti>
`;
